--- a/locar_vite/package.json
+++ b/locar_vite/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "firebase": "^12.5.0",
     "locar": "^0.1.2",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.17",
     "three": "^0.181.0"
   },
   "devDependencies": {
