--- a/locar_vite/tsconfig.json
+++ b/locar_vite/tsconfig.json
@@ -6,6 +6,8 @@
   ],
   "compilerOptions": {
     "module": "ESNext",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "noUnusedLocals":true,
+    "noUnusedParameters":false, 
   }
 }
