--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "chalk": "^5.6.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -23,6 +24,7 @@
     "geofire-common": "^6.0.0",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.2",
     "typescript": "^5.9.3",
     "zod": "^4.1.12"
   },
